[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sacagawea"
version = "0.0.1"
description = "language should be no barrier"
authors = [
    {name = "Erfan Samandarian"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "certifi",
    "cffi",
    "chardet",
    "charset-normalizer",
    "deep-translator",
    "h11",
    "h2",
    "hpack",
    "hstspreload",
    "httpcore",
    "httpx",
    "hyperframe",
    "idna",
    "PyAudio",
    "pycparser",
    "pydub",
    "requests",
    "rfc3986",
    "sniffio",
    "soundfile",
    "soupsieve",
    "srt",
    "tqdm",
    "urllib3",
    "vosk",
    "websockets",
]

[project.scripts]
sacagawea = "sacagawea.sacagawea:main"

[tool.setuptools]
packages = ["sacagawea"]
py-modules = ["sacagawea"]